# hapticui

./: Cargo.toml
benches/: vec3_benchmark.rs
docs/: vec3_api.md
examples/: vec3_usage.rs
src/haptic/core/: mod.rs  vec3.rs
src/haptic/core/tests/: benchmarks.rs  vec3_tests.rs
